.archive/enchanted-natures-dev/api/app/deployment.yaml
---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-api
  namespace: enchanted-natures-dev
  labels:
    app: dev-api
spec:
  selector:
    matchLabels:
      app: dev-api
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dev-api
    spec:
      # imagePullSecrets:
      #   - name: regcred
      containers:
        - name: api
          image: ghcr.io/enchantednatures/enchantednatures.api:v0.4.3
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /config/development.yaml
            - name: database-certs
              mountPath: /cert
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 6969
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health_check
              port: 6969
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 6969
              name: dev-api
      volumes:
        - name: config
          configMap:
            name: dev-api
        - name: database-certs
          secret:
            secretName: database-certs
      restartPolicy: Always
